syntax = "proto3";

option csharp_namespace = "AElf.Contracts.Genesis";

import "common.proto";

message ContractInfo
{
    Address Owner = 1;
    uint64 SerialNumber = 2;
}